# connect-four

./: .gitignore  README.MD  pyproject.toml
src/connect4/: __main__.py  config.py  main.py  types.py
src/connect4/ai/: base.py  beam2_agent.py  beam_agent.py  expectiminimax_agent.py  greedy_agent.py  heuristic_agent.py  mcts_agent.py  minimax_agent.py  pick.py  tactical_agent.py  tactical_greedy_agent.py  tt.py  weighted_random_agent.py
src/connect4/ai/ai_agents/: beam_agent.py  expectiminimax_agent.py  heuristic_agent.py  minimax_agent.py  random_agent.py  tactical_agent.py  tactical_greedy_agent.py
src/connect4/core/: board.py  rules.py  scoring.py  zobrist.py
src/connect4/game/: actions.py  controller.py  results.py  state.py
src/connect4/scripts/: league.py  league_core.py  league_format.py  league_main.py  league_play.py  league_pretty.py  league_roster.py  league_scoring.py  league_types.py  tournament.py
src/connect4/ui/: colors.py  effects.py  human.py  menu.py  prompts.py  render.py
src/connect4_analysis/: __main__.py
src/connect4_analysis/cli/: analyze_csv.py  make_figures.py
src/connect4_analysis/io/: load_results.py
src/connect4_analysis/metrics/: summarize.py
src/connect4_analysis/plots/: __init__.py  chart.py  portfolio.py
